example-values/grafana-nodeport.yml

apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  labels:
    app: grafana-nodeport
spec:
  ports:
  - name: grafana
    port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 30980
  selector:
    app.kubernetes.io/name: grafana
  sessionAffinity: None
  type: NodePort
