example-values/ceph-object-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-object-ingress
  namespace: rook-ceph
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ceph-bkt-1b955639-5ddc-4d23-9025-f2cf16632fd1
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-rgw-ceph-objectstore
                port:
                  number: 80
